# PropDoc

./: Core.hs  LICENSE  Main.hs  PropDoc.cabal  README.md
Input/: JavaProps.hs
example/: foobar.properties
src/: Core.hs  Main.hs
src/Input/: JavaProps.hs
src/PropDoc/: Core.hs
src/PropDoc/Input/: JavaProps.hs
tests/: Properties.hs
